feito atualizacões no script

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
     <button class="operator" onclick="calculate()"> =</button>
     <button class="operator" onclick="operator('-')">-</button>
   </div>
-<script src="./src/script.js></script>
+<script src="./src/script.js">
+  
+</script>
 </body>
 </html>
