--- a/index.html
+++ b/index.html
@@ -1,60 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style type="text/css" media="all">
-  body {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100dv;
-  }
- .container {
-  display: flex;
-  flex-wrap: wrap;
-  width: 240px;
-  border: 1px solid black;
-  border-radius: 5px;
-  background: #222;
-}
-
-.display {
-  width: 98%;
-  height: 60px;
-  font-size: 1.5rem;
-  text-align: right;
-  padding: 5px;
-  color: #fff;
-  outline: none;
-  border: none;
-  float:left;
-}
-
-.container button {
-  width: 25%;
-  height: 60px;
-  font-size: 1.3rem;
-  border: none;
-  cursor: pointer;
-  outline:1px solid;
-}
-
-.container .operator {
-  background-color: orange;
-}
-
-.container .number {
-  background-color: rgb(200, 200, 200, 0.9);
-}
-
-.container .clear {
-  background-color: rgb(100, 100, 100);
-}
-    
-  </style>
+  <title>Calculadora</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   
